# handlers/user/login.js
@@ -1,13 +1,15 @@
 'use strict';
-var dataProvider = require('../../data/user/login.js');
+//var dataProvider = require('../../data/user/login.js');
+var QueryString = require('querystring');
+const InMemoryDB = require('../../lib/inmemorydb');
 /**
  * Operations on /user/login
  */
 module.exports = {
     /**
      * summary: Logs user into the system
-     * description: 
-     * parameters: username, password
+     * description:
+     * parameters:
      * produces: application/xml, application/json
      * responses: 200, 400
      */
@@ -17,13 +19,32 @@ module.exports = {
          * For response `default` status 200 is used.
          */
         var status = 200;
-        var provider = dataProvider['get']['200'];
-        provider(req, res, function (err, data) {
-            if (err) {
-                next(err);
+        var login = req.cookies && req.cookies.login;
+        var provider;
+        var redirectUrl;
+
+        if (login) {
+            //Check the DB for the user.
+            var user = InMemoryDB.findUserByLogin(login);
+            if (user && user.length > 0) {
+                var host = (req.headers && req.headers.host) || `${req.hostname}:8000`;
+                var redirect_uri = `${req.protocol}://${host}`;
+                //TODO Build the profile page
+                res.redirect(redirectUrl);
                 return;
             }
-            res.status(status).send(data && data.responses);
+        }
+        //Redirect to Github Auth
+        const authorizationUrl = req.app.kraken.get('github:authorizationUrl');
+        const client_id = req.app.kraken.get('api:client_id');
+        var host = (req.headers && req.headers.host) || `${req.hostname}:8000`;
+        var apiBasePath = req.app.swagger && req.app.swagger.api.basePath;
+        var redirect_uri = `${req.protocol}://${host}${apiBasePath}/authorize` ;
+        var str = QueryString.stringify({
+            client_id: client_id,
+            redirect_uri: redirect_uri
         });
+        redirectUrl = `${authorizationUrl}?${str}`;
+        res.redirect(redirectUrl);
     }
 };
